first step in project

--- a/setup.cfg
+++ b/setup.cfg
@@ -14,6 +14,13 @@ exclude = venv, __pycache__
 per-file-ignores =
   # WPS421 - it is possible to have function call: print
   page_loader/scripts/page_loader.py: WPS421
+  # WPS110 it is possible to have wrong variable name
+  page_loader/engine.py: WPS110
+  # WPS410 it is possible to have wrong metadata variable: __all__
+  # WPS412 it is possible to have `__init__.py` module with logic
+  page_loader/__init__.py: WPS410, WPS412
+  # S101 it is possible to use of assert
+  tests/test_page_loader.py: S101
 
 [tool:pytest]
 norecursedirs = __pycache__
