--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,15 +12,17 @@ classifiers = [
 ]
 
 [tool.poetry.scripts]
-gendiff = "page_loader.scripts.page_loader:main"
+page-loader = "page_loader.scripts.page_loader:main"
 
 [tool.poetry.dependencies]
 python = "^3.8"
+requests = "^2.25.1"
 
 [tool.poetry.dev-dependencies]
 wemake-python-styleguide = "^0.15.2"
 pytest = "^6.2.2"
 pytest-cov = "^2.11.1"
+requests-mock = "^1.8.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
