second step in project

--- a/setup.cfg
+++ b/setup.cfg
@@ -15,12 +15,19 @@ per-file-ignores =
   # WPS421 - it is possible to have function call: print
   page_loader/scripts/page_loader.py: WPS421
   # WPS110 it is possible to have wrong variable name
-  page_loader/engine.py: WPS110
+  # WPS210 it is possible to have too many local variables
+  # WPS231 it is possible to have function with too much cognitive complexity
+  # WPS407 it is possible to have mutable module constant
+  page_loader/engine.py: WPS110, WPS210, WPS231, WPS407, WPS504
   # WPS410 it is possible to have wrong metadata variable: __all__
   # WPS412 it is possible to have `__init__.py` module with logic
   page_loader/__init__.py: WPS410, WPS412
+  # WPS110 it is possible to have wrong variable name
+  page_loader/file.py: WPS110
   # S101 it is possible to use of assert
   tests/test_page_loader.py: S101
+  # S101 it is possible to use of assert
+  tests/test_requests.py: S101
 
 [tool:pytest]
 norecursedirs = __pycache__
