--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ page-loader = "page_loader.scripts.page_loader:main"
 [tool.poetry.dependencies]
 python = "^3.8"
 requests = "^2.25.1"
+beautifulsoup4 = "^4.9.3"
+html5lib = "^1.1"
 
 [tool.poetry.dev-dependencies]
 wemake-python-styleguide = "^0.15.2"
