--- a/setup.cfg
+++ b/setup.cfg
@@ -25,7 +25,8 @@ per-file-ignores =
   # WPS110 it is possible to have wrong variable name
   page_loader/file.py: WPS110
   # S101 it is possible to use of assert
-  tests/test_page_loader.py: S101
+  # WPS210 it is possible to have too many local variables
+  tests/test_page_loader.py: S101, WPS210
   # S101 it is possible to use of assert
   tests/test_requests.py: S101
 
