--- a/setup.cfg
+++ b/setup.cfg
@@ -29,6 +29,9 @@ per-file-ignores =
   tests/test_page_loader.py: S101, WPS210
   # S101 it is possible to use of assert
   tests/test_requests.py: S101
+  # WPS420 it is possible to have wrong keyword: pass
+  # WPS604 it is possible to have incorrect node inside `class` body
+  page_loader/logging.py: WPS420, WPS604
 
 [tool:pytest]
 norecursedirs = __pycache__
