--- a/setup.cfg
+++ b/setup.cfg
@@ -18,7 +18,8 @@ per-file-ignores =
   # WPS210 it is possible to have too many local variables
   # WPS231 it is possible to have function with too much cognitive complexity
   # WPS407 it is possible to have mutable module constant
-  page_loader/engine.py: WPS110, WPS210, WPS231, WPS407, WPS504
+  # B305 it is possible to use 'next()'
+  page_loader/engine.py: WPS110, WPS210, WPS226, WPS231, WPS407, WPS504, B305
   # WPS410 it is possible to have wrong metadata variable: __all__
   # WPS412 it is possible to have `__init__.py` module with logic
   page_loader/__init__.py: WPS410, WPS412
