--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "hexlet-code"
-version = "0.1.2"
+version = "0.1.3"
 description = "Project Page Loader on www.hexlet.io"
 authors = ["li0n0k <li0n0m0nk@gmail.com>"]
 packages = [
@@ -19,6 +19,7 @@ python = "^3.8"
 requests = "^2.25.1"
 beautifulsoup4 = "^4.9.3"
 html5lib = "^1.1"
+progress = "^1.5"
 
 [tool.poetry.dev-dependencies]
 wemake-python-styleguide = "^0.15.2"
