--- a/setup.cfg
+++ b/setup.cfg
@@ -20,7 +20,7 @@ per-file-ignores =
   # WPS407 it is possible to have mutable module constant
   # B305 it is possible to use 'next()'
   # WPS437 it is possible to use protected attribute usage: _replace
-  page_loader/engine.py: WPS110, WPS210, WPS226, WPS231, WPS407, WPS504, B305 WPS437
+  page_loader/engine.py: WPS110, WPS210, WPS226, WPS231, WPS407, WPS504, B305 WPS437, WPS432
   # WPS410 it is possible to have wrong metadata variable: __all__
   # WPS412 it is possible to have `__init__.py` module with logic
   page_loader/__init__.py: WPS410, WPS412
@@ -36,7 +36,7 @@ per-file-ignores =
   # WPS604 it is possible to have incorrect node inside `class` body
   page_loader/logging.py: WPS420, WPS604
   # S101 it is possible to use of assert
-  tests/test_file.py: S101
+  tests/test_file.py: S101, WPS210
 
 [tool:pytest]
 norecursedirs = __pycache__
