--- a/setup.cfg
+++ b/setup.cfg
@@ -16,27 +16,21 @@ per-file-ignores =
   page_loader/scripts/page_loader.py: WPS421
   # WPS110 it is possible to have wrong variable name
   # WPS210 it is possible to have too many local variables
-  # WPS231 it is possible to have function with too much cognitive complexity
-  # WPS407 it is possible to have mutable module constant
   # B305 it is possible to use 'next()'
-  # WPS437 it is possible to use protected attribute usage: _replace
-  page_loader/engine.py: WPS110, WPS210, WPS226, WPS231, WPS407, WPS504, B305, WPS432, WPS229, WPS529, C901, WPS426
+  page_loader/engine.py: WPS110, WPS210, WPS323, B305
   # WPS410 it is possible to have wrong metadata variable: __all__
   # WPS412 it is possible to have `__init__.py` module with logic
   page_loader/__init__.py: WPS410, WPS412
   # WPS110 it is possible to have wrong variable name
-  # WPS437 it is possible to use protected attribute usage: _replace
-  page_loader/file.py: WPS110, WPS437, WPS210
+  page_loader/file.py: WPS110, WPS323, S311
   # S101 it is possible to use of assert
   # WPS210 it is possible to have too many local variables
   tests/test_page_loader.py: S101, WPS210, E501, WPS432, WPS226
   # S101 it is possible to use of assert
   tests/test_requests.py: S101
-  # WPS420 it is possible to have wrong keyword: pass
-  # WPS604 it is possible to have incorrect node inside `class` body
-  page_loader/logging.py: WPS420, WPS604
+  page_loader/logging.py: WPS323
   # S101 it is possible to use of assert
-  tests/test_file.py: S101, WPS210, E501
+  tests/test_file.py: S101, WPS210, WPS432
 
 [tool:pytest]
 norecursedirs = __pycache__
