--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "hexlet-code"
-version = "0.1.6"
+version = "0.1.7"
 description = "Project Page Loader on www.hexlet.io"
 authors = ["li0n0k <li0n0m0nk@gmail.com>"]
 packages = [
@@ -26,6 +26,7 @@ wemake-python-styleguide = "^0.15.2"
 pytest = "^6.2.2"
 pytest-cov = "^2.11.1"
 requests-mock = "^1.8.0"
+pytest-mock = "^3.5.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
