--- a/setup.cfg
+++ b/setup.cfg
@@ -30,7 +30,7 @@ per-file-ignores =
   tests/test_requests.py: S101
   page_loader/logging.py: WPS323
   # S101 it is possible to use of assert
-  tests/test_file.py: S101, WPS210, WPS432
+  tests/test_file.py: S101, WPS210, WPS432, E501
 
 [tool:pytest]
 norecursedirs = __pycache__
