--- a/setup.cfg
+++ b/setup.cfg
@@ -17,7 +17,7 @@ per-file-ignores =
   # WPS110 it is possible to have wrong variable name
   # WPS210 it is possible to have too many local variables
   # B305 it is possible to use 'next()'
-  page_loader/engine.py: WPS110, WPS210, WPS323, B305
+  page_loader/engine.py: WPS110, WPS210, WPS323, B305, WPS231
   # WPS410 it is possible to have wrong metadata variable: __all__
   # WPS412 it is possible to have `__init__.py` module with logic
   page_loader/__init__.py: WPS410, WPS412
